infra/k8s/overlays/infra/prod/patch-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nafura-infra-prod
  labels:
    nafura.io/layer: infra
    nafura.io/env: prod
