infra/k8s/overlays/infra/prod/patch-keycloak-hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
