infra/k8s/overlays/infra/prod/patch-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nafura-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - iam.nafuralabs.com
        - vault.nafuralabs.com
        - minio.nafuralabs.com
        - s3.nafuralabs.com
      secretName: nafura-infra-tls
